--- a/team.html
+++ b/team.html
@@ -31,20 +31,20 @@
 
   <div class="container" style="text-align: center">
     <h1>CsudaCsapat</h1>
-    <img title="CsudaCsapat" src="team01.jpg" width="100%" height="100%">
+    <img title="CsudaCsapat" src="./img/team01.jpg" width="100%" height="100%">
     <br><br><br>
     <h1>Tagjai</h1><br><br>
     <table>
       <tr>
         <td>
-          <img title="Andris" src="andris.jpg" width="500" height="350">
+          <img title="Andris" src="./img/andris.jpg" width="500" height="350">
         </td>
         <td>
           <h2>Sziasztok, Andris vagyok. Szeretem a focit, a Trollfocit.</h2>
         </td>
       <tr>
         <td>
-          <img title="Zoli" src="zoli.jpg" width="300" height="400">
+          <img title="Zoli" src="./img/zoli.jpg" width="300" height="400">
         </td>
         <td>
           <h2>Sziasztok! Zoli vagyok és szeretem a görögdinnyét.</h2>
@@ -52,14 +52,14 @@
       </tr>
       <tr>
         <td>
-          <img title="Kitti" src="kitti.jpg" width="300" height="450">
+          <img title="Kitti" src="./img/kitti.jpg" width="300" height="450">
         </td>
         <td>
           <h2>Sziasztok Balogh Kitti vagyok. Kalocsán születtem, de évek óta Szegeden élek. Szeretek úszni és kirándulni. Szenvedélyem a vezetés.</h2>
         </td>
       </tr>
       <td>
-        <img title="Peti" src="peti.jpg" width="350" height="400">
+        <img title="Peti" src="./img/peti.jpg" width="350" height="400">
       </td>
       <td>
         <h2>Pallér Péter vagyok, 1987. február 14-én születtem Királyhelmecen. Ott jártam alap- és szakközépiskolába,
