--- a/contact.html
+++ b/contact.html
@@ -6,53 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kapcsolat</title>
+    <link rel="stylesheet" href="./css/contact.css">
 </head>
 
 <body>
-<table width='100%'>
+<table>
     <tr>
-        <td width='20%'>
-                <a href='index.html'>Főoldal</a>
+        <td>
+                <a href="index.html">Főoldal</a>
         </td>
-        <td width='20%'>
-            <a href='team.html'>Csapat</a>
+        <td>
+            <a href="team.html">Csapat</a>
         </td>
-        <td width='20%'>
-            <a href='curriculum.html'>Tananyag</a>
+        <td>
+            <a href="curriculum.html">Tananyag</a>
         </td>
-        <td width='20%'>
-                <a href='task.html'>Feladatok</a>
+        <td>
+                <a href="task.html">Feladatok</a>
         </td>
     </tr>
 </table>
 <h1>Írjon nekünk!</h1>
 <br>
 <form action="mailto:kapcsolatitoke@malnamail.com">
-    <label for='fullname'>Az Ön neve</label>
+    <label for="fullname">Az Ön neve</label>
     <br>
-    <input type='text' id='fullname' name='fullname' placeholder='Teljes név' style='width:160px; height:20px' required>
-    <br>
-    <br>
-    <label for='email'>E-mail címe</label>
-    <br>
-    <input type='text' id='email' name='email' placeholder='E-mail' style='width:160px; height:20px' required>
+    <input type="text" id="fullname" name="fullname" placeholder="Teljes név" required>
     <br>
     <br>
-    <label for='subject'>Az üzenet tárgya</label>
+    <label for="email">E-mail címe</label>
     <br>
-    <input type='text' id='subject' name='subject' placeholder='Tárgy' style='width:160px; height:20px'>
-    <br>
-    <br>
-    <label for='message'>Az üzenet szövege</label>
-    <br>
-    <textarea id='message' name='message' placeholder='Üzenet' style='width:480px; height:160px' required></textarea>
+    <input type="text" id="email" name="email" placeholder="E-mail" required>
     <br>
     <br>
-    <button type='submit' style='width:160px; height:60px'>Küldés</button>
+    <label for="subject">Az üzenet tárgya</label>
+    <br>
+    <input type="text" id="subject" name="subject" placeholder="Tárgy">
     <br>
     <br>
-    <button type='reset' style='width:160px; height:20px'>Visszaállít</button>
+    <label for="message">Az üzenet szövege</label>
+    <br>
+    <textarea id="message" name="message" placeholder="Üzenet" required></textarea>
+    <br>
+    <br>
+    <button type="submit">Küldés</button>
+    <br>
+    <br>
+    <button type="reset"><img src="./img/dino.png" alt="dinoszaurusz Úr"></button>
+    
 </form>
+<br>
+<br>
+<br>
+<br>
+<footer>
+    Csudacsapat&#169; Team 2018
+</footer>
 </body>
 
 </html>
