--- a/task.html
+++ b/task.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Feladatok</title>
 </head>
+<body>
 <div align="center">
     <h1>CsudaCsapat számológépei</h1>
 
@@ -44,8 +45,6 @@
 <br>
 <br>
 <br>
-
-<body>
     <div align="center">
         <a href="andrisszamologep.html">Andris számológép</a>
     </div>
@@ -63,6 +62,7 @@
     <br>
     <div align="center">
         <a href="petiszamologep.html">Peti számológép</a>
+    </div>
 </body>
 
 </html>
