--- a/zoliszamologep.html
+++ b/zoliszamologep.html
@@ -66,9 +66,10 @@
         </tr>
        </tbody>
     </table>
+    <br>
+    <br>
+<button onclick="resetWindows()">RESET</button>
 </div>
-    <br>
-    <br>
     <br>
     <br>
 
