More action calc HTML

--- a/andrisszamologep.html
+++ b/andrisszamologep.html
@@ -41,7 +41,7 @@
           </td>
           <td>
             <label for="addSecondNumber" id="addSecondNumberLabel">
-              <input type="text" id="addSecondNumber" value="Második szám" onfocus="activeInputSecondNumber()" readonly>
+              <input type="text" id="addSecondNumber" value="Második szám:" onfocus="activeInputSecondNumber()" readonly>
               <br>
               <!-- <div id="addSecondWrittenNumber"></div> -->
             </label>
