--- a/team.html
+++ b/team.html
@@ -5,23 +5,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="/css/designe.css">
   <title>CsudaCsapat</title>
 </head>
 
 <body>
-  <div id="content" style="text-align: center">
+  <div id="content">
     <table width="100%" height="100%">
       <tr>
-        <td width="25%">
+        <td>
           <a href="index.html">Főoldal</a>
         </td>
-        <td width="25%">
+        <td>
           <a href="curriculum.html">Tananyag</a>
         </td>
-        <td width="25%">
+        <td>
           <a href="contact.html">Kapcsolat</a>
         </td>
-        <td width="25%">
+        <td>
           <a href="task.html">Feladatok</a>
         </td>
       </tr>
@@ -29,22 +30,22 @@
   </div>
 
 
-  <div class="container" style="text-align: center">
+  <div class="container">
     <h1>CsudaCsapat</h1>
-    <img title="CsudaCsapat" src="./img/team01.jpg" width="100%" height="100%">
+    <img title="CsudaCsapat" src="pictures/team01.jpg" width="100%" height="100%">
     <br><br><br>
     <h1>Tagjai</h1><br><br>
     <table>
       <tr>
         <td>
-          <img title="Andris" src="./img/andris.jpg" width="500" height="350">
+          <img title="Andris" src="pictures/andris.jpg" width="500" height="350">
         </td>
         <td>
           <h2>Sziasztok, Andris vagyok. Szeretem a focit, a Trollfocit.</h2>
         </td>
       <tr>
         <td>
-          <img title="Zoli" src="./img/zoli.jpg" width="300" height="400">
+          <img title="Zoli" src="pictures/zoli.jpg" width="300" height="400">
         </td>
         <td>
           <h2>Sziasztok! Zoli vagyok és szeretem a görögdinnyét.</h2>
@@ -52,14 +53,14 @@
       </tr>
       <tr>
         <td>
-          <img title="Kitti" src="./img/kitti.jpg" width="300" height="450">
+          <img title="Kitti" src="pictures/kitti.jpg" width="300" height="450">
         </td>
         <td>
           <h2>Sziasztok Balogh Kitti vagyok. Kalocsán születtem, de évek óta Szegeden élek. Szeretek úszni és kirándulni. Szenvedélyem a vezetés.</h2>
         </td>
       </tr>
       <td>
-        <img title="Peti" src="./img/peti.jpg" width="350" height="400">
+        <img title="Peti" src="pictures/peti.jpg" width="350" height="400">
       </td>
       <td>
         <h2>Pallér Péter vagyok, 1987. február 14-én születtem Királyhelmecen. Ott jártam alap- és szakközépiskolába,
