--- a/task.html
+++ b/task.html
@@ -62,7 +62,7 @@
     <br>
     <br>
     <div align="center">
-        <a href="petiszamologep.html">Peti számológép</a>
+        <a href="petiszamologep2.html">Peti számológép</a>
 </body>
 
 </html>
