petiszamologep2.html added to develop

--- a/task.html
+++ b/task.html
@@ -61,7 +61,7 @@
     <br>
     <br>
     <div align="center">
-        <a href="petiszamologep.html">Peti számológép</a>
+        <a href="petiszamologep2.html">Peti számológép</a>
     </div>
 </body>
 
